Fix blue header link on mobile

--- a/style.scss
+++ b/style.scss
@@ -244,7 +244,8 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      // color: $blue;
+        color: black;
     }
   }
 }
